# internal/model/order.go
@@ -15,9 +15,18 @@ type Order struct {
 	Status       string    `json:"status"`
 	Channel      string    `json:"channel"`
 	Additive     string    `json:"additive"`
-	Discount     int       `json:"discount"`
+	Code         string    `json:"discount"`
 	Ordered      time.Time `json:"ordered"`
 	Arrive       time.Time `json:"arrive"`
+}
+
+type CreateOrderRequest struct {
+	Name      string      `json:"name"`
+	Phone     string      `json:"phone"`
+	Channel   string      `json:"channel"`
+	Additive  string      `json:"additive"`
+	Code      string      `json:"discount"`
+	FoodOrder []FoodOrder `json:"food_order"`
 }
 
 type FoodOrder struct {
