# internal/server/handler/order.go
@@ -2,9 +2,11 @@ package handler
 
 import (
 	"encoding/json"
+	"errors"
 	"net/http"
 	"strconv"
 
+	"github.com/OurLuv/prefood/internal/common"
 	"github.com/OurLuv/prefood/internal/model"
 	"github.com/go-playground/validator/v10"
 	"github.com/gorilla/mux"
@@ -16,7 +18,23 @@ type ResponseOrder struct {
 	Order    *model.Order  `json:"order,omitempty"`
 }
 
+type OrderStatus struct {
+	Status string `json:"status"`
+}
+
 // * Create order
+// @Summary CreateOrder
+// @Security ApiKeyAuth
+// @Tags Order
+// @Description create order
+// @ID create-order
+// @Param restaurant_id path int true "restaurant id"
+// @Accept json
+// @Produce json
+// @Param input body model.CreateOrderRequest true "order info"
+// @Success 200 {object} ResponseOrder
+// @Failure default {object} Response
+// @Router /restaurants/{restaurant_id}/orders [post]
 func (h *Handler) CreateOrder(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
@@ -44,18 +62,34 @@ func (h *Handler) CreateOrder(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// creating order
-	if err := h.service.OrderService.Create(order); err != nil {
+	or, err := h.service.OrderService.Create(order)
+	if err != nil {
 		h.logger.Error("Can't create order", err)
 		SendError(w, "Internal error", http.StatusInternalServerError)
 		return
 	}
 
 	// sending response
-	// resp := Response{Success: true, Message: "Order is created"}
-	// json.NewEncoder(w).Encode(resp)
+	resp := ResponseOrder{
+		Response: Response{
+			Status: 1,
+		},
+		Order: or,
+	}
+	json.NewEncoder(w).Encode(&resp)
 }
 
 // * Get all orders
+// @Summary GetOrders
+// @Security ApiKeyAuth
+// @Tags Order
+// @Description get all orders
+// @ID get-order
+// @Param restaurant_id path int true "restaurant id"
+// @Produce json
+// @Success 200 {object} ResponseOrder
+// @Failure default {object} Response
+// @Router /restaurants/{restaurant_id}/orders [get]
 func (h *Handler) GetAllOrders(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
@@ -72,18 +106,28 @@ func (h *Handler) GetAllOrders(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	_ = orders
 	// sending response
-	// resp := ResponseOrder{
-	// 	Response: Response{
-	// 		Success: true,
-	// 	},
-	// 	Orders: orders,
-	// }
-	// json.NewEncoder(w).Encode(&resp)
+	resp := ResponseOrder{
+		Response: Response{
+			Status: 1,
+		},
+		Orders: orders,
+	}
+	json.NewEncoder(w).Encode(&resp)
 }
 
 // * Get by id
+// @Summary GetOrderById
+// @Security ApiKeyAuth
+// @Tags Order
+// @Description get order by id
+// @ID get-order-by-id
+// @Param restaurant_id path int true "restaurant id"
+// @Param order_id path int true "order id"
+// @Produce json
+// @Success 200 {object} ResponseOrder
+// @Failure default {object} Response
+// @Router /restaurants/{restaurant_id}/orders/{order_id} [get]
 func (h *Handler) GetOrderById(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	RId := mux.Vars(r)["restaurant_id"]
@@ -95,20 +139,23 @@ func (h *Handler) GetOrderById(w http.ResponseWriter, r *http.Request) {
 
 	order, err := h.service.OrderService.GetById(restaurantId, orderId)
 	if err != nil {
+		if errors.Is(err, common.RowNotFound) {
+			SendError(w, common.RowNotFound.Error(), http.StatusNotFound)
+			return
+		}
 		h.logger.Error("can't get order", err)
 		SendError(w, "Internal error", http.StatusInternalServerError)
 		return
 	}
 
-	_ = order
 	// sending response
-	// resp := ResponseOrder{
-	// 	Response: Response{
-	// 		Success: true,
-	// 	},
-	// 	Order: order,
-	// }
-	// json.NewEncoder(w).Encode(&resp)
+	resp := ResponseOrder{
+		Response: Response{
+			Status: 1,
+		},
+		Order: order,
+	}
+	json.NewEncoder(w).Encode(&resp)
 }
 
 // * Delete
@@ -135,13 +182,23 @@ func (h *Handler) DeleteOrderById(w http.ResponseWriter, r *http.Request) {
 }
 
 // * Change status
+// @Summary ChangeOrderStatus
+// @Security ApiKeyAuth
+// @Tags Order
+// @Description change order status (IN_PROCCESS/READY/RECIEVED)
+// @ID change-order-status
+// @Param restaurant_id path int true "restaurant id"
+// @Accept json
+// @Produce json
+// @Param input body OrderStatus true "order info"
+// @Success 200 {object} Response
+// @Failure default {object} Response
+// @Router /restaurants/{restaurant_id}/orders/{order_id} [post]
 func (h *Handler) ChangeOrderStatus(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
 	// getting data from request
-	data := struct {
-		Status string `json:"status"`
-	}{}
+	data := OrderStatus{}
 	OId := mux.Vars(r)["order_id"]
 	u64, _ := strconv.ParseUint(OId, 10, 32)
 	OrderId := uint(u64)
@@ -166,11 +223,10 @@ func (h *Handler) ChangeOrderStatus(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	_ = statusDB
 	// sending response
-	// resp := Response{
-	// 	Success: true,
-	// 	Message: "status is " + statusDB,
-	// }
-	// json.NewEncoder(w).Encode(&resp)
+	resp := Response{
+		Status:  1,
+		Message: "status is " + statusDB,
+	}
+	json.NewEncoder(w).Encode(&resp)
 }
